--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="info">
-<h2>Terrorist Attacks (past week)</h2>
+<h2>Non-State Terrorist Attacks (past week)</h2>
 <div id="terrorist_attacks">
 </div>
 </div>
@@ -25,6 +25,12 @@
 <div class="info">
 <h2>New Heads of State (past month)</h2>
 <div id="new_heads">
+</div>
+</div>
+
+<div class="info">
+<h2>Recent Notable Deaths</h2>
+<div id="notable_deaths">
 </div>
 </div>
 
