added buttons and disasters

--- a/index.html
+++ b/index.html
@@ -8,30 +8,46 @@
 
 <h1></h1>
 
-<div class="info" id="ongoing_protests">
-	<h2>Ongoing Mass Protests</h2>
+<div id="daily_snapshot">
+	<div id="short-form"></div>
+	<div id="long-form"></div>
+	<div id="list-form"></div>
 </div>
 
-<div class="info" id="ongoing_wars">
-	<h2>Ongoing Wars and Violent Conflicts</h2>
+<div id="buttons">
+	<button id="button_one"><h2>Ongoing Mass Protests<br>&nbsp;</h2></button>
+	<button id="button_two"><h2>Ongoing Wars and Violent Conflicts</h2></button>
+	<button id="button_three"><h2>Terrorist Attacks in the past week</h2></button>
+	<button id="button_four"><h2>New Heads of State in the past month</h2></button>
+	<button id="button_five"><h2>Recent Notable Deaths<br>&nbsp; </h2></button>
+	<button id="button_six"><h2>Recent Disaster News<br>&nbsp; </h2></button>
 </div>
 
-<div class="info">
-<h2>Non-State Terrorist Attacks (past week)</h2>
-<div id="terrorist_attacks">
-</div>
-</div>
-	
-<div class="info">
-<h2>New Heads of State (past month)</h2>
-<div id="new_heads">
-</div>
-</div>
+<div id="ongoing">
+	<div class="info" >
+		<div id="ongoing_protests" class="inner"></div>
+	</div>
 
-<div class="info">
-<h2>Recent Notable Deaths</h2>
-<div id="notable_deaths">
-</div>
+	<div class="info">
+		<div id="ongoing_wars" class="inner"></div>
+	</div>
+
+	<div class="info">
+			<div id="terrorist_attacks" class="inner"></div>
+			<div id="terrorist_attacks_2" class="inner"></div>
+	</div>
+
+	<div class="info">
+		<div id="new_heads" class="inner"></div>
+	</div>
+
+	<div class="info">
+		<div id="notable_deaths" class="inner"></div>
+	</div>
+
+	<div class="info">
+		<div id="disasters" class="inner"></div>
+	</div>
 </div>
 
 </body>
