Added real natural disasters list from gdacs

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<button id="button_one"><h2>Ongoing Mass Protests<br>&nbsp;</h2></button>
 	<button id="button_two"><h2>Ongoing Wars and Violent Conflicts</h2></button>
 	<button id="button_three"><h2>Terrorist Attacks in the past week</h2></button>
-	<button id="button_four"><h2>New Heads of State in the past month</h2></button>
+	<button id="button_four"><h2>New Heads of State (past month)</h2></button>
 	<button id="button_five"><h2>Recent Notable Deaths<br>&nbsp; </h2></button>
-	<button id="button_six"><h2>Recent Disaster News<br>&nbsp; </h2></button>
+	<button id="button_six"><h2>Recent Natural Disasters<br>&nbsp; </h2></button>
 </div>
 
 <div id="ongoing">
