--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
 
 <h1></h1>
 
-<div id="daily_snapshot">
-	<div id="short-form"></div>
-	<div id="long-form"></div>
-	<div id="list-form"></div>
-</div>
-
 <div id="buttons">
+	<button id="button_zero"><h2>Today<br>&nbsp;</h2></button>
 	<button id="button_one"><h2>Ongoing Mass Protests<br>&nbsp;</h2></button>
 	<button id="button_two"><h2>Ongoing Wars and Violent Conflicts</h2></button>
 	<button id="button_three"><h2>Terrorist Attacks in the past week</h2></button>
@@ -24,6 +19,11 @@
 </div>
 
 <div id="ongoing">
+
+	<div class="info" >
+		<div id="daily_snapshot" class="inner"></div>
+	</div>
+
 	<div class="info" >
 		<div id="ongoing_protests" class="inner"></div>
 	</div>
