added skeleton framework

--- a/index.html
+++ b/index.html
@@ -3,6 +3,31 @@
 <head>
 <link rel="stylesheet" type="text/css" href="index.css">
 
+ <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>News Machine</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+
 </head>
 <body>
 
@@ -15,12 +40,12 @@
 </div>
 
 <div id="buttons">
-	<button id="button_one"><h2>Ongoing Mass Protests<br>&nbsp;</h2></button>
-	<button id="button_two"><h2>Ongoing Wars and Violent Conflicts</h2></button>
-	<button id="button_three"><h2>Terrorist Attacks in the past week</h2></button>
-	<button id="button_four"><h2>New Heads of State (past month)</h2></button>
-	<button id="button_five"><h2>Recent Notable Deaths<br>&nbsp; </h2></button>
-	<button id="button_six"><h2>Recent Natural Disasters<br>&nbsp; </h2></button>
+	<button class="four columns" id="button_one"><h6>Ongoing Mass Protests<br>&nbsp;</h5></button>
+	<button class="four columns" id="button_two"><h6>Ongoing Wars and Violent Conflicts</h5></button>
+	<button class="four columns" id="button_three"><h6>Terrorist Attacks in the past week</h5></button>
+	<button class="four columns" id="button_four"><h6>New Heads of State (past month)</h5></button>
+	<button class="four columns" id="button_five"><h6>Recent Notable Deaths<br>&nbsp; </h5></button>
+	<button class="four columns" id="button_six"><h6>Recent Natural Disasters<br>&nbsp; </h5></button>
 </div>
 
 <div id="ongoing">
