--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="index.css">
 
  <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -27,6 +26,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
+<link rel="stylesheet" type="text/css" href="index.css">
 
 </head>
 <body>
@@ -35,46 +35,65 @@
 
 <div id="buttons">
 
-	<button class="four columns" id="button_zero"><h2>Today<br>&nbsp;</h2></button>
-	<button class="four columns" id="button_one"><h6>Ongoing Mass Protests<br>&nbsp;</h5></button>
-	<button class="four columns" id="button_two"><h6>Ongoing Wars and Violent Conflicts</h5></button>
-	<button class="four columns" id="button_three"><h6>Terrorist Attacks in the past week</h5></button>
-	<button class="four columns" id="button_four"><h6>New Heads of State (past month)</h5></button>
-	<button class="four columns" id="button_five"><h6>Recent Notable Deaths<br>&nbsp; </h5></button>
-	<button class="four columns" id="button_six"><h6>Recent Natural Disasters<br>&nbsp; </h5></button>
+	<div class="row">
+		<button class="four columns" id="button_zero"><h6>Today</h6></button>
+	</div>
+	<div class="row">
+		<button class="four columns" id="button_one"><h6>Mass Protests</h6></button>
+	</div> 
+	<div class="row">
+		<button class="four columns" id="button_two"><h6>Wars and Violent Conflicts</h6></button>
+	</div>
+	<div class="row">
+		<button class="four columns" id="button_three"><h6>Terrorist Attacks</h6></button>
+	</div>
+	<div class="row">
+		<button class="four columns" id="button_four"><h6>New Heads of State</h6></button>
+	</div>
+	<div class="row">
+		<button class="four columns" id="button_five"><h6>Notable Deaths</h6></button>
+	</div>
+	<div class="row">
+		<button class="four columns" id="button_six"><h6>Natural Disasters</h6></button>
+	</div>
 
 </div>
 
-<div id="ongoing">
+<div class="row">
 
-	<div class="info" >
-		<div id="daily_snapshot" class="inner"></div>
+	<div id="ongoing" class="eight columns">
+
+		<div class="info" >
+			<div id="daily_snapshot" class="inner"></div>
+		</div>
+
+		<div class="info" >
+			<div id="ongoing_protests" class="inner"></div>
+		</div>
+
+		<div class="info">
+			<div id="ongoing_wars" class="inner"></div>
+		</div>
+
+		<div class="info">
+				<div id="terrorist_attacks" class="inner"></div>
+				<div id="terrorist_attacks_2" class="inner"></div>
+		</div>
+
+		<div class="info">
+			<div id="new_heads" class="inner"></div>
+		</div>
+
+		<div class="info">
+			<div id="notable_deaths" class="inner"></div>
+		</div>
+
+		<div class="info">
+			<div id="disasters" class="inner"></div>
+		</div>
+
 	</div>
 
-	<div class="info" >
-		<div id="ongoing_protests" class="inner"></div>
-	</div>
-
-	<div class="info">
-		<div id="ongoing_wars" class="inner"></div>
-	</div>
-
-	<div class="info">
-			<div id="terrorist_attacks" class="inner"></div>
-			<div id="terrorist_attacks_2" class="inner"></div>
-	</div>
-
-	<div class="info">
-		<div id="new_heads" class="inner"></div>
-	</div>
-
-	<div class="info">
-		<div id="notable_deaths" class="inner"></div>
-	</div>
-
-	<div class="info">
-		<div id="disasters" class="inner"></div>
-	</div>
 </div>
 
 </body>
