--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
 </head>
 <body>
 
-<h1></h1>
-
 <div id="buttons">
 
 	<div class="row">
@@ -61,10 +59,11 @@
 
 <div class="row">
 
+
 	<div id="ongoing" class="eight columns">
 
 		<div class="info" >
-			<div id="daily_snapshot" class="inner"></div>
+			<div id="daily_snapshot" class="inner"><h1></h1></div>
 		</div>
 
 		<div class="info" >
