--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 		<div class="navbar">
 
+			<button id="about_button"><h6>About</h6></button>
 			<button id="button_one"><h6>Protests</h6></button>
 			<button id="button_two"><h6>Conflicts</h6></button>
 			<button id="button_three"><h6>Terrorist Attacks</h6></button>
@@ -58,6 +59,25 @@
 </header>
 
 	<div id="ongoing">
+
+		<div id="about" class="inner"><h5>About</h5><p>Nationalism, sensationalism and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people consume a dangerously biased assortment of news. Using the miracles of the internet, Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
+		<p>More specifically, Reality Brief uses the Wikimedia API to pull current information from crowdsourced lists. It also uses the Sigimera API to pull natural disaster data from gdacs.org.</p>
+		<p>Reported events include:</p>
+		<ul>
+			<li>Terrorist attacks</li>
+			<li>New heads of state</li>
+			<li>Natural disasters</li>
+			<li>Deaths of public figures</li>
+			<li>Coups</li>
+			<li>Attempted and successful political assasinations</li>
+			<li>Train crashes, airplane crashes and shipwrecks</li>
+			<li>Massacres</li>
+			<li>Major structural failures</li>
+			<li>Major data breaches</li>
+			<li>Riots</li>
+			<li>Wikimedia news items listed under "Politics and Elections", "Conflicts and Attacks" and "International Relations." These headline lists are selected subjectively, but are included because they are fact-based, tend not to be biased toward any one nation, and provide coverage of important events frequently not found in other lists</li>
+		</ul>
+		</div>
 
 		<div id="daily_snapshot" class="inner"></div>
 
