Added preliminary shipwrecks

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
 	<div id="ongoing">
 
-		<div id="about" class="inner"><h5>About</h5><p>Nationalism, sensationalism and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people consume a dangerously biased assortment of news. Using the miracles of the internet, Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
+		<div id="about" class="inner"><h5>About</h5><p>Nationalism, sensationalism and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people to consume a dangerously biased assortment of news. Using the miracles of the internet, Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
 		<p>More specifically, Reality Brief uses the Wikimedia API to pull current information from crowdsourced lists. It also uses the Sigimera API to pull natural disaster data from gdacs.org.</p>
-		<p>Reported events include:</p>
+		<p>Automatically included events:</p>
 		<ul>
 			<li>Terrorist attacks</li>
 			<li>New heads of state</li>
