--- a/index.html
+++ b/index.html
@@ -31,31 +31,36 @@
 </head>
 <body>
 
-<header>
+	<header>
 
-<h1>Reality Brief</h1>
+	<h1>Reality Brief</h1>
 
-<h2 id="today-title"></h2>
+	<h2 id="today-title"></h2>
 
-	<div id="buttons">
+		<div id="buttons">
 
-	<!-- 	<button id="button_zero"><h5>Today</h5></button> -->
-	<!-- 	<button id="button_zero_point_one"><h5>Yesterday</h5></button><br> -->
+			<div class="navbar">
+			<ul class="navbar">
+					<li><button id="button_zero"><h6>Daily</h6></button></li>
+					<li><button id="ongoing_button"><h6>Ongoing&#8595;</h6></button>
+					<ul id="ongoing_sub_menu">
+						<li><button id="button_one"><h6>Protests</h6></button></li>
+						<li><button id="button_two"><h6>Conflicts</h6></button></li>
+					</ul></li>
+					<li><button id="recent_button"><h6>Recent&#8595;</h6></button>
+					<ul id="recent_sub_menu">
+						<li><button id="button_four"><h6>Heads of State</h6></button></li>
+						<li><button id="button_five"><h6>Notable Deaths</h6></button></li>
+						<li><button id="button_three"><h6>Terrorist Attacks</h6></button></li>
+						<li><button id="button_six"><h6>Natural Disasters</h6></button></li>
+					</ul></li>				
+					<button id="about_button"><h6>About</h6></button>
+				</ul>
+			</div>
 
-		<div class="navbar">
-			<button id="button_zero"><h6>Daily</h6></button>
-			<button id="button_one"><h6>Protests</h6></button>
-			<button id="button_two"><h6>Conflicts</h6></button>
-			<button id="button_three"><h6>Terrorist Attacks</h6></button>
-			<button id="button_four"><h6>Heads of State</h6></button>
-			<button id="button_five"><h6>Notable Deaths</h6></button>
-			<button id="button_six"><h6>Natural Disasters</h6></button>
-			<button id="about_button"><h6>About</h6></button>
 		</div>
 
-	</div>
-
-</header>
+	</header>
 
 	<div id="ongoing">
 
