condenced menu into submenus

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 					<li><button id="ongoing_button"><h6>Ongoing&#8595;</h6></button>
 					<ul id="ongoing_sub_menu">
 						<li><button id="button_one"><h6>Protests</h6></button></li>
-						<li><button id="button_two"><h6>Conflicts</h6></button></li>
+						<li><button id="button_two" class="last_submenu_item"><h6>Conflicts</h6></button></li>
 					</ul></li>
 					<li><button id="recent_button"><h6>Recent&#8595;</h6></button>
 					<ul id="recent_sub_menu">
 						<li><button id="button_four"><h6>Heads of State</h6></button></li>
 						<li><button id="button_five"><h6>Notable Deaths</h6></button></li>
 						<li><button id="button_three"><h6>Terrorist Attacks</h6></button></li>
-						<li><button id="button_six"><h6>Natural Disasters</h6></button></li>
+						<li><button id="button_six" class="last_submenu_item"><h6>Natural Disasters</h6></button></li>
 					</ul></li>				
 					<button id="about_button"><h6>About</h6></button>
 				</ul>
