--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
 	</header>
 
+
 	<div id="ongoing">
 
 		<div id="about" class="inner"><h5>About</h5><p>Nationalism, sensationalism and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people to consume a dangerously biased assortment of news. Using the miracles of the internet, Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
@@ -69,7 +70,7 @@
 
 		</div>
 
-		<div id="daily_snapshot" class="inner"><h5>Today So Far</h5></div> <!-- <div>aaa</div><div>bbb</div> -->
+		<div id="daily_snapshot" class="inner"><h5>Today So Far</h5></div>
 
 		<div id="yesterday_snapshot" class="inner"><h5 id="yesterday-title"></h5></div>
 
@@ -89,6 +90,8 @@
 	</div>
 
 </div>
+
+<div id="bookmarkme-outer-div"><button id="bookmarkme" title="bookmark this page">Bookmark This Page</button></div>
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
