--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<li><button class="button_three"><h6>Terrorist Attacks</h6></button></li>
 						<li><button class="button_six last_submenu_item"><h6>Natural Disasters</h6></button></li>
 					</ul></li>				
-					<button id="about_button"><h6>About</h6></button>
+					<button class="about_button"><h6>About</h6></button>
 				</ul>
 			</div>
 		</div>
@@ -76,7 +76,7 @@
 						<li><button class="button_three"><h6>Terrorist Attacks</h6></button></li>
 						<li><button class="button_six last_submenu_item"><h6>Natural Disasters</h6></button></li>
 					</ul></li>				
-					<button id="about_button"><h6>About</h6></button>
+					<button class="about_button"><h6>About</h6></button>
 				</ul>
 			</div>
 		</div>
