changed header photo

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div id="buttons">
 			<div id="sidebar">
 				<ul>
-					<li><button class="button_zero"><h6><em>Daily</h6></em></button></li>
+					<li><button class="button_zero"><h6><em>Daily Brief</h6></em></button></li>
 					<li><h6>Ongoing</h6>
 					<ul id="ongoing_sub">
 						<li><button class="button_one"><h6><em>Protests</em></h6></button></li>
