changed header photo

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 			<div id="sidebar">
 				<ul>
 					<li><button class="button_zero"><h6><em>Daily Brief</h6></em></button></li>
-					<li><h6>Ongoing</h6>
+					<li><h6>ONGOING</h6>
 					<ul id="ongoing_sub">
 						<li><button class="button_one"><h6><em>Protests</em></h6></button></li>
 						<li><button class="button_two" class="last_submenu_item"><h6>Conflicts</h6></button></li>
 					</ul></li>
-					<li><h6>Recent</h6>
+					<li><h6>RECENT</h6>
 					<ul id="recent_sub">
 						<li><button class="button_four"><h6><em>Heads of State</em></h6></button></li>
 						<li><button class="button_five"><h6><em>Notable Deaths</em></h6></button></li>
