--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 </div>
 
-<div id="bookmarkme-outer-div"><button id="bookmarkme" title="bookmark this page">Bookmark This Page</button></div>
+<div id="bookmarkme-outer-div"><button id="bookmarkme" title="bookmark this page">Bookmark This Site</button></div>
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
