--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<li><h6>ONGOING</h6>
 					<ul id="ongoing_sub">
 						<li><button class="button_one"><h6><em>Protests</em></h6></button></li>
-						<li><button class="button_two" class="last_submenu_item"><h6>Conflicts</h6></button></li>
+						<li><button class="button_two" class="last_submenu_item"><h6><em>Conflicts</em></h6></button></li>
 					</ul></li>
 					<li><h6>RECENT</h6>
 					<ul id="recent_sub">
@@ -83,7 +83,7 @@
 
 	<div id="ongoing">
 
-		<div id="about" class="inner"><h5>About</h5><p>Nationalism, sensationalism and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people to consume a dangerously biased assortment of news. Using the miracles of the internet, Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
+		<div id="about" class="inner"><h5>About</h5><p>Nationalism, sensationalism and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people to consume a dangerously biased assortment of news. Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
 		<p>More specifically, Reality Brief uses the Wikimedia API to pull current information from crowdsourced lists. It also pulls natural disaster data from gdacs.org.</p>
 		<p>Using this data, Reality Brief automatically reports:</p>
 		<ul>
