--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
 	<div id="ongoing">
 
-		<div id="about" class="inner"><h5>About</h5><p>Nationalism, sensationalism and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people to consume a dangerously biased assortment of news. Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
+		<div id="about" class="inner"><h5>About</h5><p>Sensationalism, <a target="_blank" href="https://en.wikipedia.org/wiki/Confirmation_bias">confirmation bias</a>, and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people to consume news that is self-validating, exciting, or politically expedient for owners of the media. Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
 		<p>More specifically, Reality Brief uses the Wikimedia API to pull current information from crowdsourced lists. It also pulls natural disaster data from gdacs.org.</p>
-		<p>Using this data, Reality Brief automatically reports:</p>
+		<p>Using these sources, Reality Brief automatically reports:</p>
 		<ul>
 			<li>Every code red or orange natural disaster</li>
 			<li>Every terrorist attack</li>
@@ -105,6 +105,7 @@
 			<li>Recent terrorist attacks</li>
 			<li>Recent prominent deaths</li>
 		</ul>
+		<p>This list is still growing and being refined. Furthermore, all news is inherently biased in that it is an arbitrary selection from a vast amount of available information. However, it is possible understand and control how that information is selected. By leaving this selection process to a simple and consistent set of rules, this site is hopefully a useful tool for reducing human and political bias, allowing for transparency about news selection, and ultimately gaining a slightly closer grasp on reality.</p>
 		</div>
 
 	<div id="snapshots" class="inner">
