added conflict updates and fixed bugs

--- a/index.html
+++ b/index.html
@@ -44,18 +44,19 @@
 			<div class="navbar">
 				<ul class="navbar">
 					<li><button class="button_zero"><h6>Daily</h6></button></li>
-					<li><button id="ongoing_button"><h6>Ongoing&#8595;</h6></button>
-					<ul id="ongoing_sub_menu">
-						<li><button class="button_one"><h6>Protests</h6></button></li>
-						<li><button class="button_two last_submenu_item"><h6>Conflicts</h6></button></li>
-					</ul></li>
 					<li><button id="recent_button"><h6>Recent&#8595;</h6></button>
 					<ul id="recent_sub_menu">
+						<li><button class="button_seven"><h6>conflict updates</h6></button></li>
 						<li><button class="button_four"><h6>Heads of State</h6></button></li>
 						<li><button class="button_five"><h6>Notable Deaths</h6></button></li>
 						<li><button class="button_three"><h6>Terrorist Attacks</h6></button></li>
 						<li><button class="button_six last_submenu_item"><h6>Natural Disasters</h6></button></li>
 					</ul></li>				
+					<li><button id="ongoing_button"><h6>Ongoing&#8595;</h6></button>
+					<ul id="ongoing_sub_menu">
+						<li><button class="button_one"><h6>Protests</h6></button></li>
+						<li><button class="button_two last_submenu_item"><h6>Conflicts</h6></button></li>
+					</ul></li>
 					<button class="about_button"><h6>About</h6></button>
 				</ul>
 			</div>
@@ -65,18 +66,19 @@
 			<div id="sidebar">
 				<ul>
 					<li><button class="button_zero"><h6><em>Daily Brief</h6></em></button></li>
-					<li><h6>ONGOING</h6>
-					<ul id="ongoing_sub">
-						<li><button class="button_one"><h6><em>Protests</em></h6></button></li>
-						<li><button class="button_two" class="last_submenu_item"><h6><em>Conflicts</em></h6></button></li>
-					</ul></li>
 					<li><h6>RECENT</h6>
 					<ul id="recent_sub">
+						<li><button class="button_seven"><h6><em>conflict updates</em></h6></button></li>
 						<li><button class="button_four"><h6><em>Heads of State</em></h6></button></li>
 						<li><button class="button_five"><h6><em>Notable Deaths</em></h6></button></li>
 						<li><button class="button_three"><h6><em>Terrorist Attacks</em></h6></button></li>
 						<li><button class="button_six last_submenu_item"><h6><em>Natural Disasters</em></h6></button></li>
 					</ul></li>				
+					<li><h6>ONGOING</h6>
+					<ul id="ongoing_sub">
+						<li><button class="button_one"><h6><em>Protests</em></h6></button></li>
+						<li><button class="button_two" class="last_submenu_item"><h6><em>Conflicts</em></h6></button></li>
+					</ul></li>
 					<button class="about_button"><h6><em>About</em></h6></button>
 				</ul>
 			</div>
@@ -124,6 +126,8 @@
 
 		<div id="terrorist_attacks" class="inner"><h5>Terrorist Attacks in the Past Week</h5></div>
 		<div id="terrorist_attacks_2" class="inner"></div>
+
+		<div id="conflict_updates" class="inner"><h5>Recent updates from the conflict-news.com Twitter bot</h5></div>
 
 		<div id="new_heads" class="inner"><h5>New Heads of State This Year</h5></div>
 
