order switched for conflict updates

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		<div id="terrorist_attacks" class="inner"><h5>Terrorist Attacks in the Past Week</h5></div>
 		<div id="terrorist_attacks_2" class="inner"></div>
 
-		<div id="conflict_updates" class="inner"><h5>Recent updates from the conflict-news.com Twitter bot</h5></div>
+		<div id="conflict_updates" class="inner"><h5>Recent updates from conflict-news.com</h5></div>
 
 		<div id="new_heads" class="inner"><h5>New Heads of State This Year</h5></div>
 
