--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <body>
 
+    <div class="background-image"></div>
+
 	<header>
 
 		<h1>Reality Brief</h1>
@@ -86,7 +88,7 @@
 
 	<div id="ongoing">
 
-		<div id="about" class="inner"><h5>About</h5><p>Sensationalism, <a target="_blank" href="https://en.wikipedia.org/wiki/Confirmation_bias">confirmation bias</a>, and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people to consume news that is self-validating, exciting, or politically expedient for owners of the media. Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
+		<div id="about" class="inner"><h5>About</h5><p>Sensationalism, <a target="_blank" href="https://en.wikipedia.org/wiki/Confirmation_bias">confirmation bias</a>, and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people to consume only news that is self-validating, exciting, or politically expedient for owners of the media. Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
 		<p>More specifically, Reality Brief uses the Wikimedia API to pull current information from crowdsourced lists. It also pulls natural disaster data from gdacs.org.</p>
 		<p>Using these sources, Reality Brief automatically reports:</p>
 		<ul>
@@ -108,7 +110,7 @@
 			<li>Recent terrorist attacks</li>
 			<li>Recent prominent deaths</li>
 		</ul>
-		<p>This list is still growing and being refined. Furthermore, all news is inherently biased in that it is an arbitrary selection from a vast amount of available information. However, it is possible understand and control how that information is selected. By leaving this selection process to a simple and consistent set of rules, this site is hopefully a useful tool for reducing human and political bias, allowing for transparency about news selection, and ultimately gaining a slightly closer grasp on reality.</p>
+		<p>This list is still growing and being refined. Furthermore, all news is inherently biased in that it is an arbitrary selection from a vast amount of available information. However, it is possible understand and control how that information is selected. By leaving this selection process to a simple and consistent set of rules, this site is an attempt at reducing human and political bias, allowing for transparency about news selection, and ultimately gaining a slightly closer grasp on reality.</p>
 		</div>
 
 	<div id="snapshots" class="inner">
@@ -139,9 +141,11 @@
 
 </div>
 
-<div id="bookmarkme-outer-div"><button id="bookmarkme" title="bookmark this page">Bookmark This Site</button></div>
+<!-- <div id="bookmarkme-outer-div"><button id="bookmarkme" title="bookmark this page">Bookmark This Site</button></div> -->
 
 </body>
+
+<!-- <footer>hi</footer> -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
