fixed mobile view for some items and added more flag recognition

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<li><button class="button_zero"><h6>Daily</h6></button></li>
 					<li><button id="recent_button"><h6>Recent&#8595;</h6></button>
 					<ul id="recent_sub_menu">
-						<li><button class="button_seven"><h6>conflict updates</h6></button></li>
+						<li><button class="button_seven"><h6>conflicts Feed</h6></button></li>
 						<li><button class="button_four"><h6>Heads of State</h6></button></li>
 						<li><button class="button_five"><h6>Notable Deaths</h6></button></li>
 						<li><button class="button_three"><h6>Terrorist Attacks</h6></button></li>
@@ -70,7 +70,7 @@
 					<li><button class="button_zero"><h6><em>Daily Brief</h6></em></button></li>
 					<li><h6>RECENT</h6>
 					<ul id="recent_sub">
-						<li><button class="button_seven"><h6><em>conflict updates</em></h6></button></li>
+						<li><button class="button_seven"><h6><em>Conflicts Feed</em></h6></button></li>
 						<li><button class="button_four"><h6><em>Heads of State</em></h6></button></li>
 						<li><button class="button_five"><h6><em>Notable Deaths</em></h6></button></li>
 						<li><button class="button_three"><h6><em>Terrorist Attacks</em></h6></button></li>
