fixed mobile view for some items and added more flag recognition

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 					<li><button class="button_zero"><h6>Daily</h6></button></li>
 					<li><button id="recent_button"><h6>Recent&#8595;</h6></button>
 					<ul id="recent_sub_menu">
+						<li><button><a href="https://docs.google.com/forms/d/e/1FAIpQLSfz7fphZ-EqgobxyvgmFGjCr-Qy5Jfu7pANRnjw_6SuDnQaYA/viewform">Give Feedback</a></button></li>
 						<li><button class="button_seven"><h6>conflicts Feed</h6></button></li>
 						<li><button class="button_four"><h6>Heads of State</h6></button></li>
 						<li><button class="button_five"><h6>Notable Deaths</h6></button></li>
@@ -67,6 +68,7 @@
 		<div id="buttons">
 			<div id="sidebar">
 				<ul>
+					<li><button><a href="https://docs.google.com/forms/d/e/1FAIpQLSfz7fphZ-EqgobxyvgmFGjCr-Qy5Jfu7pANRnjw_6SuDnQaYA/viewform">Give Feedback</a></button></li>
 					<li><button class="button_zero"><h6><em>Daily Brief</h6></em></button></li>
 					<li><h6>RECENT</h6>
 					<ul id="recent_sub">
