--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<link href="https://fonts.googleapis.com/css?family=Karla|Roboto+Mono" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Roboto+Mono:400,500,700" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
