--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 	<div id="ongoing">
 
-		<div id="about" class="inner"><h5>About</h5><p>Sensationalism, <a target="_blank" href="https://en.wikipedia.org/wiki/Filter_bubble">filter bubbles</a>, and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people to consume only news that is self-validating, exciting, or politically expedient for owners of the media. Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
+		<div id="about_this" class="inner"><h5>About</h5><p>Sensationalism, <a target="_blank" href="https://en.wikipedia.org/wiki/Filter_bubble">filter bubbles</a>, and the <a target="_blank" href="https://en.wikipedia.org/wiki/Propaganda_model">propaganda model</a> cause many people to consume only news that is self-validating, exciting, or politically expedient for owners of the media. Reality Brief reduces a degree of bias by automatically reporting every instance in the world of a variety of predetermined types of events.</p>
 		<p>More specifically, Reality Brief uses the Wikimedia API to pull current information from crowdsourced lists. It also pulls natural disaster data from gdacs.org.</p>
 		<p>Using these sources, Reality Brief automatically reports:</p>
 		<ul>
@@ -137,7 +137,7 @@
 
 		<div id="notable_deaths" class="inner"><h5>Public Figures Who Have Died in the Past Three Days</h5></div>
 
-		<div id="disasters" class="inner"><h5>Natural disaster alerts in the past week</h5></div>
+		<div id="natural_disasters" class="inner"><h5>Natural disaster alerts in the past week</h5></div>
 
 	</div>
 
