--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<li>Every ongoing war or conflict in the world</li>
 			<li>Every mass protest in the world</li>
 			<li>Recently instated heads of states</li>
-			<li>Recent code red and orange natural disasters</li>
+			<li>Recent natural disasters</li>
 			<li>Recent terrorist attacks</li>
 			<li>Recent prominent deaths</li>
 		</ul>
